--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0f0c29,#302b63,#24243e);overflow:hidden;transition:background 1s ease;perspective:1200px}
+html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
 body.dark{background:#000}
 .main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
-.header-message{font-size:clamp(1rem,1.5vw,1.3rem);color:#fff;opacity:0.85;padding:1vh;text-align:center}
+.header-message{font-size:clamp(1.2rem,2.4vw,1.8rem);font-weight:700;text-align:center;padding:1vh;background:linear-gradient(to right,#ff5f6d,#ffc371,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 .grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
 @media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
 .block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px}
@@ -21,9 +21,9 @@ body.dark{background:#000}
 .portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,4);transition:transform .6s}
 .portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
 .footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:110px}
-.shock{background:linear-gradient(135deg,#ff00cc,#333399,#00f2fe);color:#fff;font-weight:700;border:none;border-radius:40px;padding:14px 26px;margin-top:12px;font-size:clamp(1rem,2vw,1.4rem);cursor:pointer;box-shadow:0 0 28px rgba(255,105,180,0.6);animation:pulse 2s infinite;max-width:90%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-.counter{font-size:clamp(1rem,1.4vw,1.2rem);color:#fff;margin-top:10px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
-.resaltado{font-size:1.3em;color:#ffd700;font-weight:800}
+.shock{background:linear-gradient(45deg,#ff4b1f,#1e90ff,#ff4b1f,#1e90ff);background-size:400% 400%;animation:gradientFlow 4s ease infinite;color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 28px;margin-top:10px;font-size:clamp(1.1rem,2vw,1.5rem);cursor:pointer;box-shadow:0 0 22px rgba(0,0,0,0.5);max-width:90%}
+.counter{font-size:clamp(1rem,1.4vw,1.2rem);color:#fff;margin-top:8px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
+.resaltado{font-size:1.2em;color:#ffcc00;font-weight:700}
 .trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
 .hidden{display:none!important}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
@@ -31,7 +31,7 @@ body.dark{background:#000}
 @keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
 @keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 @keyframes flotarRespirarTilt{0%,50%,100%{transform:translateY(0) rotateX(0) rotateY(0) scale(1)}25%{transform:translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015)}75%{transform:translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015)}}
-@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.07)}}
+@keyframes gradientFlow{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 </style>
 </head>
 <body>
@@ -39,7 +39,7 @@ body.dark{background:#000}
   <div class="header-message">¿Dónde está el libro físico? 📚</div>
   <div class="grid" id="gridContainer"></div>
   <div class="footer">
-    <button class="shock hidden" id="shockBtn">📖 Chócalas</button>
+    <button class="shock hidden" id="shockBtn">📖 ¡Chócalas por abrir un libro físico!</button>
     <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">.</span> libros físicos ✨</div>
     <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
   </div>
@@ -69,7 +69,7 @@ function iniciarUI(libro) {
     const div = document.createElement("div");
     div.className = "block";
     div.id = `bloque${i}`;
-    div.style.background = libro.colores[i] || "#555";
+    div.style.background = libro.colores[i] || "#444";
     div.innerHTML = `
       <div class="block-content label">${palabra}</div>
       <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>
