--- a/public/index.html
+++ b/public/index.html
@@ -1,131 +1,252 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
-<title>TrigguiApp – Un instante, un universo</title>
-<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet">
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-html,body{width:100%;height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow:hidden;transition:background 1s ease;perspective:1200px}
-body.dark{background:#000}
-.main{height:100dvh;display:flex;flex-direction:column;opacity:0;animation:fadeIn 1.5s ease forwards}
-.header-message{font-size:clamp(1.2rem,2.4vw,1.8rem);font-weight:700;text-align:center;padding:1vh;background:linear-gradient(to right,#ff5f6d,#ffc371,#00c6ff);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-.grid{flex:1;display:grid;gap:1vw;padding:1vw;grid-template:1fr 1fr/1fr 1fr}
-@media(orientation:landscape){.grid{grid-template:1fr/1fr 1fr 1fr 1fr}}
-.block{display:flex;justify-content:center;align-items:center;text-align:center;border-radius:20px;font-weight:bold;font-size:clamp(1.2rem,2vw,1.5rem);color:#fff;background-size:cover;background-position:center;cursor:pointer;transition:.5s;overflow:hidden;transform:scale(.95);opacity:0;animation:scaleFadeIn 1.6s forwards;position:relative;padding:10px}
-.block-content{position:absolute;inset:0;display:flex;justify-content:center;align-items:center;padding:10px;text-align:center;word-break:break-word}
-.label{z-index:1}
-.accionable{color:#fff;font-family:'Poppins',sans-serif;font-size:clamp(1rem,1.8vw,1.4rem);font-weight:600;padding:14px;border-radius:18px;opacity:0;animation:aparecer .6s forwards;text-align:center;box-shadow:0 8px 30px rgba(0,0,0,3)}
-.portada-wrapper{width:100%;height:100%;display:flex;justify-content:center;align-items:center;background:transparent;transform-style:preserve-3d;animation:flotarRespirarTilt 8s ease-in-out infinite}
-.portada-wrapper img{width:88%;height:auto;object-fit:cover;border-radius:22px;box-shadow:0 12px 30px rgba(0,0,0,4);transition:transform .6s}
-.portada-wrapper img:hover{transform:scale(1.06) rotateY(6deg) rotateX(3deg)}
-.footer{display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:1vh;min-height:110px}
-.shock{background:linear-gradient(45deg,#ff4b1f,#1e90ff,#ff4b1f,#1e90ff);background-size:400% 400%;animation:gradientFlow 4s ease infinite;color:#fff;font-weight:bold;border:none;border-radius:30px;padding:14px 28px;margin-top:10px;font-size:clamp(1.1rem,2vw,1.5rem);cursor:pointer;box-shadow:0 0 22px rgba(0,0,0,0.5);max-width:90%}
-.counter{font-size:clamp(1rem,1.4vw,1.2rem);color:#fff;margin-top:8px;font-family:'Poppins',sans-serif;text-align:center;white-space:nowrap;opacity:0;animation:fadeInInstant .3s forwards}
-.resaltado{font-size:1.2em;color:#ffcc00;font-weight:700}
-.trigguiletras{height:24px;opacity:.9;margin-top:6px;transition:opacity .4s}
-.hidden{display:none!important}
-@keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
-@keyframes fadeInInstant{to{opacity:1}}
-@keyframes scaleFadeIn{to{transform:scale(1);opacity:1}}
-@keyframes aparecer{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
-@keyframes flotarRespirarTilt{0%,50%,100%{transform:translateY(0) rotateX(0) rotateY(0) scale(1)}25%{transform:translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015)}75%{transform:translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015)}}
-@keyframes gradientFlow{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
+  <title>TrigguiApp – Un instante, un universo</title>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      width: 100%;
+      height: 100%;
+      font-family: 'Archivo', sans-serif;
+      background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
+      overflow: hidden;
+      perspective: 1000px;
+    }
+    body.dark {
+      background: #000;
+    }
+    .main {
+      display: flex;
+      flex-direction: column;
+      height: 100dvh;
+      opacity: 0;
+      animation: fadeIn 1.5s ease forwards;
+    }
+    .header-message {
+      padding: 1.5vh;
+      font-size: clamp(1.3rem, 3vw, 2.1rem);
+      font-weight: 800;
+      text-align: center;
+      background: linear-gradient(270deg, #ff00cc, #3333ff, #00f2fe, #ff9966);
+      background-size: 800% 800%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: gradientTitle 12s ease infinite;
+      text-shadow: 0 0 8px rgba(255,255,255,0.1);
+    }
+    .grid {
+      flex: 1;
+      display: grid;
+      gap: 1.4vw;
+      padding: 0 2vw;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+    @media (orientation: landscape) {
+      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
+    }
+    .block {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      border-radius: 20px;
+      font-weight: bold;
+      font-size: clamp(1rem, 1.9vw, 1.3rem);
+      color: #fff;
+      background-size: 200% 200%;
+      background-position: center;
+      cursor: pointer;
+      transition: .5s;
+      overflow: hidden;
+      transform: scale(.95);
+      opacity: 0;
+      animation: scaleFadeIn 1.6s forwards;
+      padding: 10px;
+    }
+    .block-content {
+      position: absolute;
+      inset: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+      text-align: center;
+    }
+    .label { z-index: 1; }
+    .accionable {
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      font-size: clamp(0.9rem, 1.4vw, 1.2rem);
+      font-weight: 600;
+      padding: 12px;
+      border-radius: 14px;
+      opacity: 0;
+      animation: aparecer .6s forwards;
+      text-align: center;
+      box-shadow: 0 6px 20px rgba(0,0,0,.3);
+    }
+    .portada-wrapper {
+      width: 100%; height: 100%;
+      display: flex; justify-content: center; align-items: center;
+      background: radial-gradient(circle,#ffffff10,#0000);
+      animation: glow 6s ease-in-out infinite;
+    }
+    .portada-wrapper img {
+      width: 85%;
+      max-height: 92%;
+      object-fit: contain;
+      border-radius: 20px;
+      box-shadow: 0 10px 24px rgba(0,0,0,.4);
+      transition: transform .5s;
+    }
+    .portada-wrapper img:hover {
+      transform: scale(1.03) rotateY(4deg) rotateX(2deg);
+    }
+    .footer {
+      min-height: 110px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 3vh 2vw 2vh;
+    }
+    .shock {
+      background: linear-gradient(45deg,#ff4b1f,#1e90ff,#ff4b1f,#1e90ff);
+      background-size: 400% 400%;
+      animation: gradientFlow 4s ease infinite;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      border-radius: 28px;
+      padding: 14px 28px;
+      margin-top: 6px;
+      font-size: clamp(1rem, 2vw, 1.4rem);
+      cursor: pointer;
+      box-shadow: 0 0 22px rgba(255, 105, 180, .4);
+      max-width: 95%;
+    }
+    .counter {
+      font-size: clamp(.9rem, 1.2vw, 1.1rem);
+      color: #fff;
+      margin-top: 8px;
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      white-space: nowrap;
+      opacity: 0;
+      animation: fadeInInstant .3s forwards;
+    }
+    .resaltado {
+      font-size: 1.1em;
+      color: #ffcc00;
+      font-weight: 700;
+    }
+    .trigguiletras {
+      height: 20px;
+      opacity: .9;
+      margin-top: 1.5vh;
+    }
+    .hidden { display: none !important; }
+
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px) } to { opacity: 1; transform: translateY(0) } }
+    @keyframes fadeInInstant { to { opacity: 1 } }
+    @keyframes scaleFadeIn { to { transform: scale(1); opacity: 1 } }
+    @keyframes aparecer { from { opacity: 0; transform: scale(.95) } to { opacity: 1; transform: scale(1) } }
+    @keyframes glow { 0% { background: radial-gradient(circle, #ffffff05, #0000) } 50% { background: radial-gradient(circle, #ffffff15, #0000) } 100% { background: radial-gradient(circle, #ffffff05, #0000) } }
+    @keyframes gradientFlow { 0% { background-position: 0% 50% } 50% { background-position: 100% 50% } 100% { background-position: 0% 50% } }
+    @keyframes gradientTitle { 0% { background-position: 0% 50% } 50% { background-position: 100% 50% } 100% { background-position: 0% 50% } }
+  </style>
 </head>
 <body>
-<div class="main">
-  <div class="header-message">¿Dónde está el libro físico? 📚</div>
-  <div class="grid" id="gridContainer"></div>
-  <div class="footer">
-    <button class="shock hidden" id="shockBtn">📖 ¡Chócalas por abrir un libro físico!</button>
-    <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">.</span> libros físicos ✨</div>
-    <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
+  <div class="main">
+    <div class="header-message">¿Dónde está el libro físico? 📚</div>
+    <div class="grid" id="gridContainer"></div>
+    <div class="footer">
+      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas!</button>
+      <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
+      <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
+    </div>
   </div>
-</div>
 
-<script>
-const $ = id => document.getElementById(id);
-let libroActual, bloquePortada, revelado = false;
+  <script>
+    const $ = id => document.getElementById(id);
+    let libroActual, bloquePortada, revelado = false;
 
-fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
-  .then(res => res.json())
-  .then(data => {
-    const libros = data.libros;
-    const libro = libros[Math.floor(Math.random() * libros.length)];
-    libroActual = libro;
-    bloquePortada = Math.floor(Math.random() * 4);
-    iniciarUI(libro);
-  });
+    fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
+      .then(res => res.json())
+      .then(data => {
+        const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        libroActual = libro;
+        bloquePortada = Math.floor(Math.random() * 4);
+        iniciarUI(libro);
+      });
 
-function iniciarUI(libro) {
-  const grid = $("gridContainer");
-  const logo = $("logoTriggui");
-  grid.innerHTML = "";
-  logo.classList.remove("hidden");
-
-  libro.palabras.forEach((palabra, i) => {
-    const div = document.createElement("div");
-    div.className = "block";
-    div.id = `bloque${i}`;
-    div.style.background = libro.colores[i] || "#444";
-    div.innerHTML = `
-      <div class="block-content label">${palabra}</div>
-      <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>
-    `;
-    div.onclick = () => manejarClick(i);
-    grid.appendChild(div);
-  });
-}
-
-function manejarClick(i) {
-  if (revelado) return location.reload();
-  if (i === bloquePortada) revelarTodo();
-  else {
-    $(`bloque${i}Text`).classList.remove("hidden");
-    $(`bloque${i}`).querySelector(".label").classList.add("hidden");
-  }
-}
-
-function revelarTodo() {
-  libroActual.palabras.forEach((_, i) => {
-    const block = $(`bloque${i}`);
-    if (i === bloquePortada) {
-      block.innerHTML = "";
-      const wrapper = document.createElement("div");
-      const img = document.createElement("img");
-      wrapper.className = "portada-wrapper";
-      img.src = libroActual.portada;
-      img.alt = "Portada";
-      wrapper.appendChild(img);
-      block.appendChild(wrapper);
-      block.style.background = "none";
-      block.style.padding = "0";
-    } else {
-      $(`bloque${i}Text`).classList.remove("hidden");
-      block.querySelector(".label").classList.add("hidden");
+    function iniciarUI(libro) {
+      const grid = $("gridContainer");
+      $("logoTriggui").classList.remove("hidden");
+      grid.innerHTML = "";
+      libro.palabras.forEach((palabra, i) => {
+        const div = document.createElement("div");
+        div.className = "block";
+        div.id = `bloque${i}`;
+        div.style.background = libro.colores[i] || "#555";
+        div.innerHTML = `
+          <div class="block-content label">${palabra}</div>
+          <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
+        div.onclick = () => manejarClick(i);
+        grid.appendChild(div);
+      });
     }
-  });
-  document.body.classList.add("dark");
-  document.body.style.background = libroActual.fondo;
-  $("shockBtn").classList.remove("hidden");
-  $("logoTriggui").classList.add("hidden");
-  revelado = true;
-}
 
-$("shockBtn").onclick = async () => {
-  $("shockBtn").classList.add("hidden");
-  $("contador").classList.remove("hidden");
+    function manejarClick(i) {
+      if (revelado) return location.reload();
+      if (i === bloquePortada) revelarTodo();
+      else {
+        $(`bloque${i}Text`).classList.remove("hidden");
+        $(`bloque${i}`).querySelector(".label").classList.add("hidden");
+      }
+    }
 
-  try {
-    const res = await fetch("https://triggui-api.vercel.app/api/increment");
-    const data = await res.json();
-    $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
-  } catch (e) {
-    $("contador").innerText = "📚 ¡Error al contar libros!";
-  }
-};
-</script>
+    function revelarTodo() {
+      libroActual.palabras.forEach((_, i) => {
+        const block = $(`bloque${i}`);
+        if (i === bloquePortada) {
+          block.innerHTML = "";
+          const wrapper = document.createElement("div");
+          wrapper.className = "portada-wrapper";
+          const img = document.createElement("img");
+          img.src = libroActual.portada;
+          img.alt = "Portada";
+          wrapper.appendChild(img);
+          block.appendChild(wrapper);
+          block.style.background = "none";
+        } else {
+          $(`bloque${i}Text`).classList.remove("hidden");
+          block.querySelector(".label").classList.add("hidden");
+        }
+      });
+      document.body.classList.add("dark");
+      document.body.style.background = libroActual.fondo;
+      $("logoTriggui").classList.add("hidden");
+      $("shockBtn").classList.remove("hidden");
+      revelado = true;
+    }
+
+    $("shockBtn").onclick = async () => {
+      $("shockBtn").classList.add("hidden");
+      $("contador").classList.remove("hidden");
+      try {
+        const res = await fetch("https://triggui-api.vercel.app/api/increment");
+        const data = await res.json();
+        $("contador").innerHTML = `✨ Juntos hemos abierto <span class="resaltado">${data.total.toLocaleString('es-MX')}</span> libros físicos ✨`;
+      } catch {
+        $("contador").innerText = "📚 ¡Error al contar libros!";
+      }
+    };
+  </script>
 </body>
 </html>
